# as_urobotiq

./: README.md
google-test/: .gitignore  GraspNetwork-21.index  GraspNetwork-25.index  GraspNetwork-50.index  checkpoint  googleGrasp.py  googleGrasp_CEM.py  googleGrasp_input.py  googleGrasp_train.py  read_GoogleGraspData.py
google-test/grasping_dataset_057/: features_057.csv
urobotiq/: CMakeLists.txt  package.xml
urobotiq_description/: CMakeLists.txt  package.xml  urobotiq.rviz
urobotiq_description/launch/: urobotiq_upload.launch  urobotiq_view.launch
urobotiq_description/urdf/: arm_ur5.urdf.xacro  camera_kinect.gazebo.xacro  camera_xtion.gazebo.xacro  gripper_a3f.urdf.xacro  pedestal.urdf.xacro  urobotiq.gv  urobotiq.urdf  urobotiq.urdf.xacro
urobotiq_gazebo/: CMakeLists.txt  package.xml
urobotiq_gazebo/controller/: urobotiq_gazebo_control.yaml
urobotiq_gazebo/launch/: controller_utils.launch  urobotiq.launch  urobotiq_gazebo_control.launch
urobotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
urobotiq_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  urobotiq.srdf
urobotiq_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  urobotiq_moveit_planning_execution.launch  warehouse.launch
